alternate section style

--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -93,11 +93,11 @@
   </div>
   </div>
 
-<!--principal's message-->
+<!--principal's welcome-->
 <div class="container mt-5">
   <div class="row">
     <div class="col-sm-8">
-      <h3>Message from the principal</h3>
+      <h1>Message from the principal</h1>
       <img class="d-lg-none " src="../Images/Portrait_placeholder.png" alt="" style="width: 40%; object-fit: cover; float:right;">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dignissim metus tortor, sit amet ullamcorper metus elementum sit amet. Morbi lectus magna, commodo eu vulputate ac, rutrum in mauris. Donec ornare, diam id sodales facilisis, felis neque vulputate massa, id condimentum leo enim eu sem. Maecenas quam nunc, elementum finibus tortor vehicula, porttitor commodo urna. Aenean congue, dolor ut fermentum tincidunt, felis elit bibendum risus, at vehicula est diam quis mi. Nullam tempor fringilla lorem eget vulputate. Suspendisse potenti. Etiam a pharetra lacus, eget consectetur mauris. Donec iaculis congue tellus. Morbi fermentum scelerisque ex et mollis. Etiam vulputate ipsum ac cursus rhoncus. Fusce semper pulvinar iaculis. Cras eleifend nec nulla pellentesque congue. Phasellus eu elementum purus, et consequat leo.
 
@@ -109,8 +109,30 @@
   </div>
 </div>
 
-<hr>
-
+<div class="container-fluid pt-1 pb-3 altSection">
+<div class="container mt-5 ">
+  <div class="row">
+    <h1>Whats on?</h1>
+    <div class="col-sm-4">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dignissim metus tortor, sit amet ullamcorper metus elementum sit amet. Morbi lectus magna, commodo eu vulputate ac, rutrum in mauris. Donec ornare, diam id sodales facilisis, felis neque vulputate massa, id condimentum leo enim eu sem. Maecenas quam nunc, elementum finibus tortor vehicula, porttitor commodo urna. Aenean congue, dolor ut fermentum tincidunt, felis elit bibendum risus, at vehicula est diam quis mi. Nullam tempor fringilla lorem eget vulputate. Suspendisse potenti. Etiam a pharetra lacus, eget consectetur mauris. Donec iaculis congue tellus. Morbi fermentum scelerisque ex et mollis. Etiam vulputate ipsum ac cursus rhoncus. Fusce semper pulvinar iaculis. Cras eleifend nec nulla pellentesque congue. Phasellus eu elementum purus, et consequat leo.
+      </p>
+    </div>
+    <div class="col-sm-4">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dignissim metus tortor, sit amet ullamcorper metus elementum sit amet. Morbi lectus magna, commodo eu vulputate ac, rutrum in mauris. Donec ornare, diam id sodales facilisis, felis neque vulputate massa, id condimentum leo enim eu sem. Maecenas quam nunc, elementum finibus tortor vehicula, porttitor commodo urna. Aenean congue, dolor ut fermentum tincidunt, felis elit bibendum risus, at vehicula est diam quis mi. Nullam tempor fringilla lorem eget vulputate. Suspendisse potenti. Etiam a pharetra lacus, eget consectetur mauris. Donec iaculis congue tellus. Morbi fermentum scelerisque ex et mollis. Etiam vulputate ipsum ac cursus rhoncus. Fusce semper pulvinar iaculis. Cras eleifend nec nulla pellentesque congue. Phasellus eu elementum purus, et consequat leo.
+      </p>
+    </div>
+    <div class="col-sm-4">
+      <div class="row h-100 row-cols-1">
+        <div class="col">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+        <div class="col">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.ey</div>
+        <div class="col">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+        <div class="col">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+      </div>
+      
+    </div>
+  </div>
+</div>
+</div>
 
 <div class="container mt-5"><h1>Our R.I.S.E values</h1>
   <!-- Carousel -->
@@ -162,34 +184,10 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-sm-8">
-  <h3>Offcanvas Sidebar</h3>
+  <h3>PB4L at Rangeview</h3>
   <p>Offcanvas is similar to modals, except that it is often used as a sidebar.</p>
   <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
+
   
 
   <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#contactUs">
