--- a/Pages/Uniform.html
+++ b/Pages/Uniform.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-    <html lang="en">
+<html lang="en">
+
 <head>
   <title>Site</title>
   <meta charset="utf-8">
@@ -8,27 +9,29 @@
   <link href="../CSS/Style.css" rel="stylesheet">
 
 </head>
+
 <body>
- 
 
-<!--Contact us offcanvas-->
-<div class="offcanvas offcanvas-bottom h-auto" id="contactUs">
-  <div class="offcanvas-header">
-    <h1 class="offcanvas-title">Heading</h1>
-    <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
-  </div>
-  
-  <div class="offcanvas-body">
-    <p>Some text lorem ipsum.</p>
-    <p>Some text lorem ipsum.</p>
-    <p>Some text lorem ipsum.</p>
-    <button class="btn btn-secondary" type="button">Button</button>
-  </div>
-</div>
 
-<!--navbar-->
-<nav class="navbar w-100 fixed-top navbar-expand-sm bg-dark navbar-dark ">
-  <a class="navbar-brand d-lg-none" href="Index.html"><img src="../Images/Text-Logo-Dark-Glow.png" id="logo"></img></a>
+  <!--Contact us offcanvas-->
+  <div class="offcanvas offcanvas-bottom h-auto" id="contactUs">
+    <div class="offcanvas-header">
+      <h1 class="offcanvas-title">Heading</h1>
+      <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
+    </div>
+
+    <div class="offcanvas-body">
+      <p>Some text lorem ipsum.</p>
+      <p>Some text lorem ipsum.</p>
+      <p>Some text lorem ipsum.</p>
+      <button class="btn btn-secondary" type="button">Button</button>
+    </div>
+  </div>
+
+  <!--navbar-->
+  <nav class="navbar w-100 fixed-top navbar-expand-sm bg-dark navbar-dark ">
+    <a class="navbar-brand d-lg-none" href="Index.html"><img src="../Images/Text-Logo-Dark-Glow.png"
+        id="logo"></img></a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
@@ -42,8 +45,8 @@
             <li><a class="dropdown-item" href="AboutUs.html">Our School</a></li>
             <li><a class="dropdown-item" href="BoardOfTrustees.html">BoardOfTrustees</a></li>
             <li><button class="dropdown-item" type="button" data-bs-toggle="offcanvas" data-bs-target="#contactUs">
-              CONTACT US
-            </button></li>
+                CONTACT US
+              </button></li>
           </ul>
         </li>
         <li class="nav-item dropdown m-3 h2">
@@ -56,7 +59,7 @@
         </li>
 
         <!--hidden on mobile-->
-        <a class="d-none d-lg-block" href="Index.html"><img src="../Images/Text-Logo-Dark-Glow.png" id="logo"></img> 
+        <a class="d-none d-lg-block" href="Index.html"><img src="../Images/Text-Logo-Dark-Glow.png" id="logo"></img>
         </a>
 
         <li class="nav-item dropdown m-3 h2">
@@ -66,7 +69,7 @@
             <li><a class="dropdown-item" href="Digital.html">Digital</a></li>
             <li><a class="dropdown-item" href="#">A third link</a></li>
           </ul>
-        </li>  
+        </li>
         <li class="nav-item dropdown m-3 h2">
           <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">Link</a>
           <ul class="dropdown-menu animate slideIn">
@@ -74,30 +77,33 @@
             <li><a class="dropdown-item" href="#">Another link</a></li>
             <li><a class="dropdown-item" href="PB4L.html">PB4L</a></li>
           </ul>
-        </li>   
+        </li>
       </ul>
     </div>
-  
-</nav>
 
-<div style="padding-top: 20vh"> 
+  </nav>
 
-<h1> Uniform Gang Gang </h1>
+  <div style="padding-top: 20vh">
 
-  <div class="container mt-5" style="padding-top: 10vh"> 
-    <div class="row">
-      <h1>Our Uniform</h1>
-      <div class="col-sm-2">
-        <div class="card">
-        </div>
+    <h1> Uniform Gang Gang </h1>
 
-
+    <div class="container mt-5" style="padding-top: 10vh">
+      <div class="row">
+        <h1>Our Uniform</h1>
         <div class="col-sm-2">
-          <div class="row">
-            <div class="column">
-            <img src="../Images/Rangeview Uniform 1 .png" height="500"  width="400">
+          <div class="card">
+          </div>
+
+
+          <div class="col-sm-2">
+            <div class="row">
+              <div class="column">
+                <img src="../Images/Rangeview Uniform 1 .png" height="500" width="400">
+              </div>
+              <img src="../Images/Rangeview Uniform words.png" height="500" width="400">
             </div>
-            <img src="../Images/Rangeview Uniform words.png" height="500" width="400"> 
-           </div>
+          </div>
         </div>
-</div>
+      </div>
+    </div>
+  </div>
