small changes, ongoing added buttons to whats on section made index more in depth trying to change text when carousel changes

--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -123,16 +123,19 @@
     </div>
     <div class="col-sm-4">
       <div class="row h-100 row-cols-1">
-        <div class="col">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
-        <div class="col">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.ey</div>
-        <div class="col">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
-        <div class="col">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+        <a class="col depress" >
+          <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="40%"><h2>INFO</h2>
+        </a>
+        <a class="col depress"><img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="40%"><h2>INFO</h2></a>
+        <a class="col depress"><img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="40%"><h2>INFO</h2></a>
       </div>
       
     </div>
   </div>
 </div>
 </div>
+
+<div class="fixedParallax" style="background-image: url(../Images/guy.jpg); height: 70vh"></div>
 
 <div class="container mt-5"><h1>Our R.I.S.E values</h1>
   <!-- Carousel -->
@@ -181,21 +184,23 @@
 
 
 
-<div class="container mt-5">
+<div class="container mt-5 pb-3">
   <div class="row">
     <div class="col-sm-8">
   <h3>PB4L at Rangeview</h3>
-  <p>Offcanvas is similar to modals, except that it is often used as a sidebar.</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dignissim metus tortor, sit amet ullamcorper metus elementum sit amet. Morbi lectus magna, commodo eu vulputate ac, rutrum in mauris. Donec ornare, diam id sodales facilisis, felis neque vulputate massa, id condimentum leo enim eu sem. Maecenas quam nunc, elementum finibus tortor vehicula, porttitor commodo urna. Aenean congue, dolor ut fermentum tincidunt, felis elit bibendum risus, at vehicula est diam quis mi. Nullam tempor fringilla lorem eget vulputate. Suspendisse potenti. Etiam a pharetra lacus, eget consectetur mauris. Donec iaculis congue tellus. Morbi fermentum scelerisque ex et mollis. Etiam vulputate ipsum ac cursus rhoncus. Fusce semper pulvinar iaculis. Cras eleifend nec nulla pellentesque congue. Phasellus eu elementum purus, et consequat leo.
+    .</p>
   <br>
-
   
-
-  <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#contactUs">
-    CONTACT US
-  </button>
     </div>
+  <div class="col-sm-4" >
+    <a href="#" class="" style="background-color: var(--fireEngine); display: block; height: 80%; width: 80%; text-align: center; text-decoration: none;border: 5px solid var(--auburn);"><h1 style="padding-top: 20%; color:var(--platinum);">Learn More</h1></a>
+  </div>
   </div>
 </div>
+<button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#contactUs">
+    CONTACT US
+  </button>
 <script src="../Js/Script.js" ></script>
 <link href="../CSS/Style.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
