centered learn more button

--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -188,13 +188,12 @@
   <div class="row">
     <div class="col-sm-8">
   <h3>PB4L at Rangeview</h3>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dignissim metus tortor, sit amet ullamcorper metus elementum sit amet. Morbi lectus magna, commodo eu vulputate ac, rutrum in mauris. Donec ornare, diam id sodales facilisis, felis neque vulputate massa, id condimentum leo enim eu sem. Maecenas quam nunc, elementum finibus tortor vehicula, porttitor commodo urna. Aenean congue, dolor ut fermentum tincidunt, felis elit bibendum risus, at vehicula est diam quis mi. Nullam tempor fringilla lorem eget vulputate. Suspendisse potenti. Etiam a pharetra lacus, eget consectetur mauris. Donec iaculis congue tellus. Morbi fermentum scelerisque ex et mollis. Etiam vulputate ipsum ac cursus rhoncus. Fusce semper pulvinar iaculis. Cras eleifend nec nulla pellentesque congue. Phasellus eu elementum purus, et consequat leo.
-    .</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dignissim metus tortor, sit amet ullamcorper metus elementum sit amet. Morbi lectus magna, commodo eu vulputate ac, rutrum in mauris. Donec ornare, diam id sodales facilisis, felis neque vulputate massa, id condimentum leo enim eu sem. Maecenas quam nunc, elementum finibus tortor vehicula, porttitor commodo urna. Aenean congue, dolor ut fermentum tincidunt, felis elit bibendum risus, at vehicula est diam quis mi. Nullam tempor fringilla lorem eget vul</p>
   <br>
   
     </div>
   <div class="col-sm-4" >
-    <a href="#" class="" style="background-color: var(--fireEngine); display: block; height: 80%; width: 80%; text-align: center; text-decoration: none;border: 5px solid var(--auburn);"><h1 style="padding-top: 20%; color:var(--platinum);">Learn More</h1></a>
+    <a href="#" class="" style="background-color: var(--fireEngine); display: flex; justify-content: center; align-items: center; height: 80%; width: 80%; text-align: center; text-decoration: none;border: 5px solid var(--auburn);"><h1 style=" color:var(--platinum);">Learn More</h1></a>
   </div>
   </div>
 </div>
