TODO: Navbar consistent across site footer on each page fill all navbar links with pages

--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -36,18 +36,18 @@
     <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
       <ul class="navbar-nav list-inline text-center d-flex justify-content-center align-items-center">
         <li class="nav-item dropdown m-3 h2">
-          <a class="nav-link dropdown" href="#" role="button" data-bs-toggle="dropdown">About Us</a>
+          <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">About Us</a>
           <ul class="dropdown-menu justify-items-stretch animate slideIn">
             <li><a class="dropdown-item" href="Staff.html">Staff</a></li>
             <li><a class="dropdown-item" href="AboutUs.html">Our School</a></li>
-            <li><a class="dropdown-item" href="BoardOfTrustees.html">BoardOfTrustees</a></li>
+            <li><a class="dropdown-item" href="BoardOfTrustees.html">Board of Trustees</a></li>
             <li><button class="dropdown-item" type="button" data-bs-toggle="offcanvas" data-bs-target="#contactUs">
               CONTACT US
             </button></li>
           </ul>
         </li>
         <li class="nav-item dropdown m-3 h2">
-          <a class="nav-link " href="Enrolment.html" role="button" data-bs-toggle="dropdown">Enrolment</a>
+          <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">Enrolment</a>
           <ul class="dropdown-menu animate slideIn">
             <li><a class="dropdown-item" href="Enrolment.html">Location</a></li>
             <li><a class="dropdown-item" href="#">Another link</a></li>
@@ -64,7 +64,7 @@
           <ul class="dropdown-menu animate slideIn">
             <li><a class="dropdown-item" href="Uniform.html">Uniform</a></li>
             <li><a class="dropdown-item" href="Digital.html">Digital</a></li>
-            <li><a class="dropdown-item" href="#">A third link</a></li>
+            <li><a class="dropdown-item" href="#">What's on</a></li>
           </ul>
         </li>  
         <li class="nav-item dropdown m-3 h2">
@@ -112,7 +112,7 @@
 <div class="container-fluid pt-1 pb-3 altSection">
 <div class="container mt-5 ">
   <div class="row">
-    <h1>Whats on?</h1>
+    <h1>What's on?</h1>
     <div class="col-sm-4">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dignissim metus tortor, sit amet ullamcorper metus elementum sit amet. Morbi lectus magna, commodo eu vulputate ac, rutrum in mauris. Donec ornare, diam id sodales facilisis, felis neque vulputate massa, id condimentum leo enim eu sem. Maecenas quam nunc, elementum finibus tortor vehicula, porttitor commodo urna. Aenean congue, dolor ut fermentum tincidunt, felis elit bibendum risus, at vehicula est diam quis mi. Nullam tempor fringilla lorem eget vulputate. Suspendisse potenti. Etiam a pharetra lacus, eget consectetur mauris. Donec iaculis congue tellus. Morbi fermentum scelerisque ex et mollis. Etiam vulputate ipsum ac cursus rhoncus. Fusce semper pulvinar iaculis. Cras eleifend nec nulla pellentesque congue. Phasellus eu elementum purus, et consequat leo.
       </p>
@@ -124,10 +124,10 @@
     <div class="col-sm-4">
       <div class="row h-100 row-cols-1">
         <a class="col depress" >
-          <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="40%"><h2>INFO</h2>
+          <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="40%"><h2>ALL UPCOMING EVENTS</h2>
         </a>
-        <a class="col depress"><img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="40%"><h2>INFO</h2></a>
-        <a class="col depress"><img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="40%"><h2>INFO</h2></a>
+        <a class="col depress"><img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="40%"><h2>NEWSLETTER</h2></a>
+        <a class="col depress"><img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="40%"><h2>LATEST INFO</h2></a>
       </div>
       
     </div>
@@ -135,7 +135,7 @@
 </div>
 </div>
 
-<div class="fixedParallax" style="background-image: url(../Images/guy.jpg); height: 70vh"></div>
+<div class="fixedParallax" style="background-image: url(../Images/Entrance.PNG); height: 70vh"></div>
 
 <div class="container mt-5"><h1>Our R.I.S.E values</h1>
   <!-- Carousel -->
@@ -193,7 +193,7 @@
   
     </div>
   <div class="col-sm-4" >
-    <a href="#" class="" style="background-color: var(--fireEngine); display: flex; justify-content: center; align-items: center; height: 80%; width: 80%; text-align: center; text-decoration: none;border: 5px solid var(--auburn);"><h1 style=" color:var(--platinum);">Learn More</h1></a>
+    <a href="PB4L.html" class="" style="background-color: var(--fireEngine); display: flex; justify-content: center; align-items: center; height: 80%; width: 80%; text-align: center; text-decoration: none;border: 5px solid var(--auburn);"><h1 style=" color:var(--platinum);">Learn More</h1></a>
   </div>
   </div>
 </div>
