--- a/Pages/Digital.html
+++ b/Pages/Digital.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Site</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../CSS/Style.css" rel="stylesheet">
-  
-</head>
+  <head>
+    <title>Site</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
+  </head>
 <body>
 
 <!--Contact us offcanvas-->
 <div class="offcanvas offcanvas-bottom h-auto" id="contactUs">
   <div class="offcanvas-header">
-    <h1 class="offcanvas-title">Heading</h1>
+    <h1 class="offcanvas-title">Contact</h1>
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
   </div>
   
   <div class="offcanvas-body">
-    <p>Some text lorem ipsum.</p>
-    <p>Some text lorem ipsum.</p>
-    <p>Some text lorem ipsum.</p>
-    <button class="btn btn-secondary" type="button">Button</button>
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-sm-4">
+          <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" style="width: 20vh;">
+          <h2>Method</h2>
+        </div>
+        <div class="col-sm-4">
+          <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" style="width: 20vh;">
+          <h2>Method</h2>
+        </div>
+        <div class="col-sm-4">
+          <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" style="width: 20vh;">
+          <h2>Method</h2>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
@@ -35,22 +47,22 @@
     <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
       <ul class="navbar-nav list-inline text-center d-flex justify-content-center align-items-center">
         <li class="nav-item dropdown m-3 h2">
-          <a class="nav-link dropdown" href="#" role="button" data-bs-toggle="dropdown">About Us</a>
+          <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">About Us</a>
           <ul class="dropdown-menu justify-items-stretch animate slideIn">
             <li><a class="dropdown-item" href="Staff.html">Staff</a></li>
             <li><a class="dropdown-item" href="AboutUs.html">Our School</a></li>
-            <li><a class="dropdown-item" href="BoardOfTrustees.html">BoardOfTrustees</a></li>
+            <li><a class="dropdown-item" href="BoardOfTrustees.html">Board of Trustees</a></li>
             <li><button class="dropdown-item" type="button" data-bs-toggle="offcanvas" data-bs-target="#contactUs">
               CONTACT US
             </button></li>
           </ul>
         </li>
         <li class="nav-item dropdown m-3 h2">
-          <a class="nav-link " href="Enrolment.html" role="button" data-bs-toggle="dropdown">Enrolment</a>
+          <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">Enrolment</a>
           <ul class="dropdown-menu animate slideIn">
             <li><a class="dropdown-item" href="Enrolment.html">Location</a></li>
-            <li><a class="dropdown-item" href="#">Another link</a></li>
-            <li><a class="dropdown-item" href="#">A third link</a></li>
+            <li><a class="dropdown-item" href="#">Link</a></li>
+            <li><a class="dropdown-item" href="#">Link</a></li>
           </ul>
         </li>
 
@@ -63,14 +75,14 @@
           <ul class="dropdown-menu animate slideIn">
             <li><a class="dropdown-item" href="Uniform.html">Uniform</a></li>
             <li><a class="dropdown-item" href="Digital.html">Digital</a></li>
-            <li><a class="dropdown-item" href="#">A third link</a></li>
+            <li><a class="dropdown-item" href="Index.html#whatsOn">What's on</a></li>
           </ul>
         </li>  
         <li class="nav-item dropdown m-3 h2">
           <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">Link</a>
           <ul class="dropdown-menu animate slideIn">
             <li><a class="dropdown-item" href="#">Link</a></li>
-            <li><a class="dropdown-item" href="#">Another link</a></li>
+            <li><a class="dropdown-item" href="#">Link</a></li>
             <li><a class="dropdown-item" href="PB4L.html">PB4L</a></li>
           </ul>
         </li>   
@@ -92,3 +104,59 @@
 </h2>
       </div>
       <div class="col-sm-4">
+
+</div>
+    </div>
+</div>
+
+<!-- Footer -->
+<footer class="bg-dark text-center text-white">
+  <!-- Grid container -->
+  <div class="container p-4">
+
+    <!-- Section: Social media -->
+    <section class="mb-4">
+      <!-- Facebook -->
+      <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="https://www.facebook.com/rangeviewint/" role="button"><i class="fa fa-facebook-f"></i></a>
+
+      <!-- Twitter -->
+      <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee" href="#!" role="button"><i class="fa fa-twitter"></i></a>
+
+    </section>
+    <!-- Section: Social media -->
+
+
+
+    <!-- Section: Text -->
+    <section class="row mb-4">
+      <div class="col-sm-12">
+        <h3>Rangeview Intermediate</h3>
+        <p>P O Box 83-161, Edmonton</p>
+        <p>Keru Place, Te Atatu South</p>
+        <p>Ph: 09 838 9468</p>
+        <p>Fax: 09 836 2437</p>
+        <a href="mailto:office@rangeview.school.nz" style="color: white;"><p>office@rangeview.school.nz</p></a>
+      </div>
+      <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#contactUs" style="width:20vh; margin:auto;">
+    CONTACT US
+  </button>
+    </section>
+
+    </section>
+    <!-- Section: Text -->
+
+
+  </div>
+  <!-- Grid container -->
+
+</footer>
+<!-- Footer -->
+
+  
+<script src="../Js/Script.js" ></script>
+<link href="../CSS/Style.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+</body>
+
+</html>
