LAYOUT UP AND RUNNING

--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -191,7 +191,7 @@
   </div>
 
 
-
+  <script src="../Js/Parallax.js"></script>
   <script src="../Js/Script.js"></script>
   <link href="../CSS/Style.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
