effects on the uniform page for engaging feel

--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -17,14 +17,14 @@
   </div>
   <!--hidden on mobile-->
   <div class="d-none d-sm-block">
-    <div class="parallaxSection" style='background-image: url("../Images/BirdEyeCropped.jpeg"); height: 40vw;'>
-      <div class="parallaxInner"></div>
+    <div class="parallaxSection" style='background-image: url("../Images/BirdEyeCropped.jpeg"); height: 35vw;'>
+
     </div>
   </div>
 
   <div class="d-block d-sm-none">
     <div class="parallaxSection"
-      style='background-image: url("../Images/BirdEyeVertCrop.jpeg"); height: 55vh; background-position: top;'>
+      style='background-image: url("../Images/BirdEyeVertCrop.jpeg"); height: 50vh; background-position: top;'>
       <div class="parallaxInner"></div>
     </div>
   </div>
@@ -32,8 +32,10 @@
   <!--principal's welcome-->
   <div class="container mt-5">
     <div class="row">
+      <h1 style="width:auto; margin-right: auto; margin-left: auto;"><i>Wisdom with truth - Whakaaronui me ta pono</i></h1>
       <div class="col-sm-8">
-        <h1>Message from the principal</h1>
+        
+        <h2>Principal's welcome</h2>
         <img class="d-lg-none " src="../Images/Portrait_placeholder.png" alt=""
           style="width: 40%; object-fit: cover; float:right;">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dignissim metus tortor, sit amet ullamcorper
@@ -93,7 +95,7 @@
               <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="40%">
               <h2>ALL UPCOMING EVENTS</h2>
             </a>
-            <a class="col depress"><img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="40%">
+            <a href="https://www.rangeview.school.nz/Cache/Pictures/3179597/06_April_2003.pdf" class="col depress"><img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="40%">
               <h2>NEWSLETTER</h2>
             </a>
             <a class="col depress"><img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="40%">
