--- a/Pages/Digital.html
+++ b/Pages/Digital.html
@@ -1,46 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Site</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src = 'https://code.jquery.com/jquery-3.6.3.min.js'></script>
-  </head>
+
+<head>
+  <title>Site</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src='https://code.jquery.com/jquery-3.6.3.min.js'></script>
+</head>
+
 <body>
 
   <div id="TopContent">
 
   </div>
 
-<div class="container mt-5 " style="padding-top: 10vh;"></div>
-<div class="container mt-5">
+  <div class="container mt-5 "></div>
+  <div class="container mt-5">
     <div class="row">
       <div class="col-sm-8">
-<h1> Digital Learning </h1>
+        <h1> Digital Learning </h1>
 
-<h2> BYOD Information and 
-    
-    
-    Frequently Asked Questions
-</h2>
+        <h2> BYOD Information and
+
+
+          Frequently Asked Questions
+        </h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dignissim metus tortor, sit amet ullamcorper
+          metus elementum sit amet. Morbi lectus magna, commodo eu vulputate ac, rutrum in mauris. Donec ornare, diam id
+          sodales facilisis, felis neque vulputate massa, id condimentum leo enim eu sem. Maecenas quam nunc, elementum
+          finibus tortor vehicula, porttitor commodo urna. Aenean congue, dolor ut fermentum tincidunt, felis elit
+          bibendum risus, at vehicula est diam quis mi. Nullam tempor fringilla lorem eget vulputate. Suspendisse
+          potenti. Etiam a pharetra lacus, eget consectetur mauris. Donec iaculis congue tellus. Morbi fermentum
+          scelerisque ex et mollis. Etiam vulputate ipsum ac cursus rhoncus. Fusce semper pulvinar iaculis. Cras
+          eleifend nec nulla pellentesque congue. Phasellus eu elementum purus, et consequat leo.</p>
       </div>
       <div class="col-sm-4">
-
-</div>
+        <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%">
+      </div>
     </div>
-</div>
+  </div>
 
-<div id="Footer">
+  <div id="Footer">
 
-</div>
+  </div>
 
-  
-<script src="../Js/Script.js" ></script>
-<link href="../CSS/Style.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+
+  <script src="../Js/Script.js"></script>
+  <link href="../CSS/Style.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
+    integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
