--- a/Pages/LayoutTop.html
+++ b/Pages/LayoutTop.html
@@ -9,16 +9,22 @@
       <div class="container mt-5">
         <div class="row">
           <div class="col-sm-4">
-            <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" style="width: 20vh;">
-            <h2>Method</h2>
+            <div class="card">
+              <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%">
+              <h2>Method</h2>
+            </div>
           </div>
           <div class="col-sm-4">
-            <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" style="width: 20vh;">
-            <h2>Method</h2>
+            <div class="card">
+              <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%">
+              <h2>Method</h2>
+            </div>
           </div>
           <div class="col-sm-4">
-            <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" style="width: 20vh;">
-            <h2>Method</h2>
+            <div class="card">
+              <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%">
+              <h2>Method</h2>
+            </div>
           </div>
         </div>
       </div>
