--- a/Pages/Uniform.html
+++ b/Pages/Uniform.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <title>Site</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src = 'https://code.jquery.com/jquery-3.6.3.min.js'></script>
-  </head>
+<head>
+  <title>Site</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src='https://code.jquery.com/jquery-3.6.3.min.js'></script>
+</head>
 
 <body>
 
@@ -17,78 +17,77 @@
 
   </div>
 
-  <div style="padding-top: 10vh">
+  <div>
 
-    <div class="container mt-5" style="padding-top: 10vh">
+    <div class="container mt-5">
       <div class="row">
         <h1>Our Uniform</h1>
-        <div class="col-sm-4">
-          <img src="../Images/Rangeview Uniform 1 .png" height="500" width="400">
-        </div>
 
-        <div class="col-sm-8">
-          <div class="row">
 
-        <div class="col-sm-3">
-          <div class="card">
-            <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp"  width="100%">  
-            <h3>Item</h3>
-            <p>Price</p>
-          </div>
-        </div>
-        <div class="col-sm-3">
-          <div class="card">
-            <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp"  width="100%">  
-            <h3>Item</h3>
-            <p>Price</p>
-          </div>
-        </div>
-        <div class="col-sm-3">
-          <div class="card">
-            <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp"  width="100%">  
-            <h3>Item</h3>
-            <p>Price</p>
-          </div>
-        </div>
-        <div class="col-sm-3">
-          <div class="card">
-            <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp"  width="100%">  
-            <h3>Item</h3>
-            <p>Price</p>
-          </div>
-        </div>
-        <div class="col-sm-3">
-          <div class="card">
-            <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp"  width="100%">  
-            <h3>Item</h3>
-            <p>Price</p>
-          </div>
-        </div>
-        <div class="col-sm-3">
-          <div class="card">
-            <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp"  width="100%">  
-            <h3>Item</h3>
-            <p>Price</p>
-          </div>
-        </div>
-        <div class="col-sm-3">
-          <div class="card">
-            <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp"  width="100%">  
-            <h3>Item</h3>
-            <p>Price</p>
-          </div>
-        </div>
-        <div class="col-sm-3">
-          <div class="card">
-            <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp"  width="100%">  
-            <h3>Item</h3>
-            <p>Price</p>
-          </div>
-        </div>
-        
+        <div class="col-sm-7">
+          <div class="row storeItem">
 
-      </div>
-    </div>
+            <div class="col-sm-3" >
+              <div class="card">
+                <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%">
+                <h3>Item</h3>
+                <p>Price</p>
+              </div>
+            </div>
+            <div class="col-sm-3">
+              <div class="card">
+                <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%">
+                <h3>Item</h3>
+                <p>Price</p>
+              </div>
+            </div>
+            <div class="col-sm-3">
+              <div class="card">
+                <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%">
+                <h3>Item</h3>
+                <p>Price</p>
+              </div>
+            </div>
+            <div class="col-sm-3">
+              <div class="card">
+                <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%">
+                <h3>Item</h3>
+                <p>Price</p>
+              </div>
+            </div>
+            <div class="col-sm-3">
+              <div class="card">
+                <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%">
+                <h3>Item</h3>
+                <p>Price</p>
+              </div>
+            </div>
+            <div class="col-sm-3">
+              <div class="card">
+                <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%">
+                <h3>Item</h3>
+                <p>Price</p>
+              </div>
+            </div>
+            <div class="col-sm-3">
+              <div class="card">
+                <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%">
+                <h3>Item</h3>
+                <p>Price</p>
+              </div>
+            </div>
+            <div class="col-sm-3">
+              <div class="card">
+                <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%">
+                <h3>Item</h3>
+                <p>Price</p>
+              </div>
+            </div>
+          </div>          
+        </div>
+        <div class="col-sm-5">
+          <img src="../Images/Rangeview Uniform 1 .png" style="width: 100%; border: 2px solid gray">
+        </div>
       </div>
     </div>
   </div>
@@ -97,11 +96,13 @@
 
   </div>
 
-  
-<script src="../Js/Script.js" ></script>
-<link href="../CSS/Style.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+
+  <script src="../Js/Script.js"></script>
+  <link href="../CSS/Style.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
+    integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
