getting rid of spaces at top of pages and fixing storeitem class to work on other pages

--- a/Pages/Staff.html
+++ b/Pages/Staff.html
@@ -15,8 +15,9 @@
   </div>
 
 <!--Introduction of Teachers to students and parents-->
-<div class="container mt-5" style="padding-top: 10vh"> 
-  <div class="row">
+<div class="container mt-5"> 
+
+  <div class="row storeItem">
     <h1>Rangeview Staff</h1>
     <div class="col-sm-2">
       <div class="card">
@@ -53,15 +54,14 @@
         <p>Staff member information.</p>
       </div>
     </div>
-    <div class="col-sm-2">
+    <div class="col-sm-2 ">
       <div class="card">
         <img src="../Images/me ong.png"  width="100%">  
         <h3>Member</h3>
         <p>Staff member information.</p>
       </div>
     </div>
-  </div>
-  <div class="row" >
+
     <div class="col-sm-1">
       <!--initiates stagger-->
     </div>
@@ -100,8 +100,7 @@
         <p>Staff member information.</p>
       </div>
     </div>
-  </div>
-  <div class="row">
+
     <div class="col-sm-2">
       <div class="card">
         <img src="../Images/me ong.png"  width="100%">  
@@ -144,8 +143,7 @@
         <p>Staff member information.</p>
       </div>
     </div>
-  </div>
-  <div class="row" >
+
     <div class="col-sm-1">
       <!--initiates stagger-->
     </div>
