--- a/Pages/AboutUs.html
+++ b/Pages/AboutUs.html
@@ -14,17 +14,25 @@
 
   </div>
 
-<div class="container mt-5 " style="padding-top: 10vh;">
+<div class="container mt-5 ">
   <div class="row">
-    <div class="col-sm-6">
-      <h3>Our School</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dignissim metus tortor, sit amet ullamcorper metus elementum sit amet. Morbi lectus magna, commodo eu vulputate ac, rutrum in mauris. Donec ornare, diam id sodales facilisis, felis neque vulputate massa, id condimentum leo enim eu sem. Maecenas quam nunc, elementum finibus tortor vehicula, porttitor commodo urna. Aenean congue, dolor ut fermentum tincidunt, felis elit bibendum risus, at vehicula est diam quis mi. Nullam tempor fringilla lorem eget vulputate. Suspendisse potenti. Etiam a pharetra lacus, eget consectetur mauris. Donec iaculis congue tellus. Morbi fermentum scelerisque ex et mollis. Etiam vulputate ipsum ac cursus rhoncus. Fusce semper pulvinar iaculis. Cras eleifend nec nulla pellentesque congue. Phasellus eu elementum purus, et consequat leo.
+    <h1>Our School</h1>
+    <div class="col-sm-12">   
+
+        <iframe class="d-block d-sm-none" style="float: left; padding: 10px" width="100%" height="315" src="https://www.youtube.com/embed/EAV6J6hE9rk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+        <iframe class="d-none d-sm-block" style="float: left; padding: 10px" width="50%" height="315" src="https://www.youtube.com/embed/EAV6J6hE9rk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+   
+      <p>
+        
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dignissim metus tortor, sit amet ullamcorper metus elementum sit amet. Morbi lectus magna, commodo eu vulputate ac, rutrum in mauris. Donec ornare, diam id sodales facilisis, felis neque vulputate massa, id condimentum leo enim eu sem. Maecenas quam nunc, elementum finibus tortor vehicula, porttitor commodo urna. Aenean congue, dolor ut fermentum tincidunt, felis elit bibendum risus, at vehicula est diam quis mi. Nullam tempor fringilla lorem eget vulputate. Suspendisse potenti. Etiam a pharetra lacus, eget consectetur mauris. Donec iaculis congue tellus. Morbi fermentum scelerisque ex et mollis. Etiam vulputate ipsum ac cursus rhoncus. Fusce semper pulvinar iaculis. Cras eleifend nec nulla pellentesque congue. Phasellus eu elementum purus, et consequat leo.
 
         Aliquam malesuada finibus egestas. Praesent velit eros, eleifend et imperdiet eu, convallis non velit. Donec malesuada, ligula eget eleifend faucibus, arcu tellus sodales nulla, ut ultrices augue arcu a velit. Sed quis lorem vel lectus laoreet lobortis placerat et nisl. Integer pretium risus nec erat mollis vestibulum. Etiam molestie libero vitae dui rutrum ornare. Curabitur vulputate, elit eget mattis pulvinar, risus enim auctor augue, id lobortis lectus purus sed elit. Vivamus pretium arcu quis diam porttitor lobortis. Mauris et venenatis tellus. Nam sodales, massa id feugiat posuere, dui tortor dictum lorem, et pellentesque nisi dolor ac metus. Duis venenatis ipsum ac aliquam dictum. Ut felis quam, efficitur id ultricies sit amet, vestibulum et nibh. Nullam euismod ac dolor sit amet fringilla.</p>
-    </div>
-    <div class="col-sm-6">
-      <iframe width="100%" height="315" src="https://www.youtube.com/embed/EAV6J6hE9rk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    </div>
+    
+
+      </div>
+
   </div>
 </div>
 
