--- a/Pages/BoardOfTrustees.html
+++ b/Pages/BoardOfTrustees.html
@@ -1,19 +1,108 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Site</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src = 'https://code.jquery.com/jquery-3.6.3.min.js'></script>
-  </head>
+    <html lang="en">
+      <head>
+        <title>Site</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src = 'https://code.jquery.com/jquery-3.6.3.min.js'></script>
+      </head>
 <body>
+ 
+  <div id="TopContent">
 
-<!--Contact us offcanvas-->
-<div id="TopContent">
+  </div>
 
+<!--Introduction of Teachers to students and parents-->
+<div class="container mt-5"> 
+
+  <div class="row storeItem">
+    <h1>Rangeview Board of trustees</h1>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Member information.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Member information.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Member information.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Member information.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Member information.</p>
+      </div>
+    </div>
+    <div class="col-sm-2 ">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Member information.</p>
+      </div>
+    </div>
+
+    <div class="col-sm-1">
+      <!--initiates stagger-->
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Member information.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Member information.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Member information.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Member information.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card">
+        <img src="../Images/me ong.png"  width="100%">  
+        <h3>Member</h3>
+        <p>Member information.</p>
+      </div>
+    </div>
+  </div>
 </div>
+
 
 <div id="Footer">
 
