--- a/Pages/Enrolment.html
+++ b/Pages/Enrolment.html
@@ -17,7 +17,7 @@
 <head>
 </head> 
 <body>
-<div class="container mt-5 " style="padding-top: 10vh;">
+<div class="container mt-5 ">
   <div class="row">
       <div class="col-sm-6">
         <h1>Our School Zone</h1>
