--- a/Pages/PB4L.html
+++ b/Pages/PB4L.html
@@ -13,7 +13,7 @@
 
   </div>
 
-      <div class="container mt-5" style="padding-top: 10vh;">
+      <div class="container mt-5">
         <!-- Carousel -->
       <div id="riseValueCarousel" class="carousel slide" data-bs-ride="carousel">
       
