added times, images, and started with rise  portrait animation

--- a/Pages/LayoutTop.html
+++ b/Pages/LayoutTop.html
@@ -55,8 +55,8 @@
             <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">Enrolment</a>
             <ul class="dropdown-menu animate slideIn">
               <li><a class="dropdown-item" href="Enrolment.html">Location</a></li>
-              <li><a class="dropdown-item" href="#">Link</a></li>
-              <li><a class="dropdown-item" href="#">Link</a></li>
+              <li><a class="dropdown-item" href="Uniform.html">Uniform</a></li>
+              <li><a class="dropdown-item" href="Digital.html">Digital</a></li>
             </ul>
           </li>
   
@@ -68,7 +68,7 @@
             <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">School Info</a>
             <ul class="dropdown-menu animate slideIn">
               <li><a class="dropdown-item" href="Uniform.html">Uniform</a></li>
-              <li><a class="dropdown-item" href="Digital.html">Digital</a></li>
+              <li><a class="dropdown-item" href="Index.html#Dates">Important Dates</a></li>
               <li><a class="dropdown-item" href="Index.html#whatsOn">What's on</a></li>
             </ul>
           </li>  
