--- a/Pages/Footer.html
+++ b/Pages/Footer.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="bg-dark text-center text-white">
+<footer class="bg-dark text-center text-white" id="Footer">
     <!-- Grid container -->
     <div class="container p-4">
 
@@ -22,10 +22,8 @@
       <section class="row mb-4">
         <div class="col-sm-12">
           <h3>Rangeview Intermediate</h3>
-          <p>P O Box 83-161, Edmonton</p>
-          <p>Keru Place, Te Atatu South</p>
+          <p>P O Box 83-161, Edmonton<br>Keru Place, Te Atatu South</p>
           <p>Ph: 09 838 9468</p>
-          <p>Fax: 09 836 2437</p>
           <a href="mailto:office@rangeview.school.nz" style="color: white;">
             <p>office@rangeview.school.nz</p>
           </a>
