--- a/Pages/LayoutTop.html
+++ b/Pages/LayoutTop.html
@@ -46,9 +46,7 @@
               <li><a class="dropdown-item" href="Staff.html">Staff</a></li>
               <li><a class="dropdown-item" href="AboutUs.html">Our School</a></li>
               <li><a class="dropdown-item" href="BoardOfTrustees.html">Board of Trustees</a></li>
-              <li><button class="dropdown-item" type="button" data-bs-toggle="offcanvas" data-bs-target="#contactUs">
-                CONTACT US
-              </button></li>
+              
             </ul>
           </li>
           <li class="nav-item dropdown m-3 h2">
@@ -76,8 +74,8 @@
             <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">Link</a>
             <ul class="dropdown-menu animate slideIn">
               <li><a class="dropdown-item" href="#">Link</a></li>
-              <li><a class="dropdown-item" href="#">Link</a></li>
               <li><a class="dropdown-item" href="PB4L.html">PB4L</a></li>
+              <li><a class="dropdown-item" href="#Footer">Contact Us</a></li>
             </ul>
           </li>   
         </ul>
