--- a/Pages/LayoutTop.html
+++ b/Pages/LayoutTop.html
@@ -65,7 +65,7 @@
           <li class="nav-item dropdown m-3 h2">
             <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">School Info</a>
             <ul class="dropdown-menu animate slideIn">
-              <li><a class="dropdown-item" href="Uniform.html">Uniform</a></li>
+              <li><a class="dropdown-item" href="SchoolInfo.html#SportInfo">Sport</a></li>
               <li><a class="dropdown-item" href="Index.html#Dates">Important Dates</a></li>
               <li><a class="dropdown-item" href="Index.html#whatsOn">What's on</a></li>
             </ul>
