implementing video at top, other minor rearrangeme

--- a/Pages/Footer.html
+++ b/Pages/Footer.html
@@ -6,16 +6,22 @@
       <!-- Section: Social media -->
       <section class="mb-4">
         <!-- Facebook -->
-        <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998"
+        <a class="btn btn-primary btn-floating m-1 socialLink" style="background-color: #3b5998; border: none;"
           href="https://www.facebook.com/rangeviewint/" role="button"><i class="fa fa-facebook-f"></i></a>
 
         <!-- Twitter -->
-        <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee" href="#!" role="button"><i
+        <a class="btn btn-primary btn-floating m-1 socialLink" style="background-color: #55acee; border: none;" href="#!" role="button"><i
             class="fa fa-twitter"></i></a>
 
       </section>
-      <!-- Section: Social media -->
-
+      <style>
+        .socialLink{
+          filter: brightness(100%);
+        }
+        .socialLink:hover{
+          filter: brightness(85%);
+        }
+      </style>
 
 
       <!-- Section: Text -->
@@ -28,10 +34,6 @@
             <p>office@rangeview.school.nz</p>
           </a>
         </div>
-        <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#contactUs"
-          style="width:20vh; margin:auto;">
-          CONTACT US
-        </button>
       </section>
 
       </section>
