--- a/Pages/Uniform.html
+++ b/Pages/Uniform.html
@@ -92,6 +92,17 @@
     </div>
   </div>
 
+<div class="container ">
+  <div class="row">
+
+  <div class="col-sm-12">
+    <h2>Purchasing Uniform</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit ipsam ratione saepe vero porro, fugiat earum minima minus facere, nihil enim provident, voluptatibus vitae numquam officiis animi ea laudantium eveniet.</p>
+  </div>
+      
+</div>
+</div>
+
   <div id="Footer">
 
   </div>
