--- a/Pages/Enrolment.html
+++ b/Pages/Enrolment.html
@@ -14,6 +14,21 @@
 
   </div>
 
+    <!--hidden on mobile-->
+    <div class="d-none d-sm-block">
+      <!--<div class="parallaxSection" style='background-image: url("../Images/BirdEyeCropped.jpeg"); height: 35vw;'>-->
+      <div class="parallaxSection" style='background-image: url("../Images/BirdEye.jpeg"); height: 30vw; transform: translate(0,30px);'>
+  
+      </div>
+    </div>
+  
+    <div class="d-block d-sm-none">
+      <div class="parallaxSection"
+        style='  background-size: cover;background-image: url("../Images/BirdEye.jpeg"); height: 35vh; background-position: top;'>
+        <div class="parallaxInner"></div>
+      </div>
+    </div>
+
 <head>
 </head> 
 <body>
@@ -27,7 +42,7 @@
         </div>
       </div>
       <div class="col-sm-6" style="padding-top: 10vh;">
-        <h2> Our Bus route </h2>
+        <h2> Bus Information </h2>
         <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisis mauris sit amet massa vitae tortor. Auctor neque vitae tempus quam pellentesque nec nam aliquam. Vel risus commodo viverra maecenas accumsan. Nulla malesuada pellentesque elit eget gravida. Proin nibh nisl condimentum id venenatis. Pellentesque adipiscing commodo elit at imperdiet dui accumsan sit. Quis commodo odio aenean sed adipiscing diam donec adipiscing. Semper eget duis at tellus at urna. Sit amet dictum sit amet justo donec enim. Aenean euismod elementum nisi quis eleifend quam adipiscing vitae proin. Sagittis orci a scelerisque purus.
         </p>
       </div>
@@ -38,7 +53,7 @@
 
 </div>
 
-  
+<script src="../Js/Parallax.js"></script>
 <script src="../Js/Script.js" ></script>
 <link href="../CSS/Style.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
