--- a/Pages/LayoutTop.html
+++ b/Pages/LayoutTop.html
@@ -4,7 +4,7 @@
       <h1 class="offcanvas-title">Contact</h1>
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
     </div>
-    
+    <!--
     <div class="offcanvas-body">
       <div class="container mt-5">
         <div class="row">
@@ -29,6 +29,7 @@
         </div>
       </div>
     </div>
+  -->
   </div>
   
   <!--navbar-->
@@ -74,7 +75,7 @@
             <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown">Link</a>
             <ul class="dropdown-menu animate slideIn">
               <li><a class="dropdown-item" href="#">Link</a></li>
-              <li><a class="dropdown-item" href="PB4L.html">PB4L</a></li>
+              <li><a class="dropdown-item" href="Index.html#Pb4l">PB4L</a></li>
               <li><a class="dropdown-item" href="#Footer">Contact Us</a></li>
             </ul>
           </li>   
