fixed parrallax video centering and js errors

--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -16,7 +16,8 @@
 
   </div>
   <div style="position: relative;width: 100%;height: 90vh;overflow: hidden; ">
-  <iframe class="parallaxVid" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" title="Rangeview Intermediate Website" src="https://www.youtube.com/embed/CRmxjF34YgY?autoplay=1&mute=1&amp;controls=0&amp;rel=0&amp;playsinline=1&amp;enablejsapi=1&amp;origin=https%3A%2F%2Fwww.rangeview.school.nz&amp;widgetid=1" id="widget2" style="position: absolute;width: 100%; height:115vh; transform: translateY(-120px);"></iframe>
+  <iframe class="parallaxVid" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; loop; picture-in-picture; web-share" title="Rangeview Intermediate Website" src="https://www.youtube.com/embed/CRmxjF34YgY?autoplay=1&loop=1&mute=1&amp;controls=0&amp;rel=0&amp;playsinline=1&amp;enablejsapi=1&amp;origin=https%3A%2F%2Fwww.rangeview.school.nz&amp;widgetid=1&playlist=CRmxjF34YgY" id="widget2" style="position: absolute;width: 100%; height:115vh; width:204vh; margin:auto; transform: translate(-50%,-120px);"></iframe>
+  <div class="parallaxInner"><b><i>Wisdom with truth - Whakaaronui me ta pono</i></b></div>
 </div>
 
   <!--
@@ -39,8 +40,8 @@
   <!--principal's welcome-->
   <div class="container mt-5">
     <div class="row">
-      <h1 style="width:auto; margin-right: auto; margin-left: auto;"><i>Wisdom with truth - Whakaaronui me ta pono</i>
-      </h1>
+      <!--<h1 style="width:auto; margin-right: auto; margin-left: auto;"><i>Wisdom with truth - Whakaaronui me ta pono</i>
+      </h1>-->
       <div class="col-sm-8">
 
         <h2>Principal's welcome</h2>
